# django-tdd-presentation

./: .coveragerc  .pre-commit-config.yaml  Makefile  README.md  grpc_client.py  manage.py  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
restaurants/: filters.py  models.py  serializers.py  urls.py  views.py
restaurants/grpc/: handlers.py  restaurants.proto  restaurants_pb2.py  restaurants_pb2_grpc.py  serializers.py  services.py
restaurants/migrations/: 0001_initial.py
restaurants/tests/: test_models.py
tdd/: asgi.py  settings.py  urls.py  wsgi.py
tdd/settings/: base.py  testing.py
tests/: conftest.py  test_restaurants.py
